# dispatcher

./: .gitignore  .gitmodules  CONTRIBUTING.md  COPYING  Cargo.toml  Dockerfile  README.md  TODO.md  build_image_infrastructure.sh  components.uml  config.yaml  diagram.dot  dispatcher.uml  execute_infrastructure_ephemeral_container.sh  requirements.txt  watcher.py
.github/workflows/: build.yml
compute/: Cargo.toml
compute/src/: compute.rs  lib.rs  main.rs  mm.rs  partition.rs  vg.rs
configuration/: Cargo.toml
configuration/src/: lib.rs
dispatcher/: Cargo.toml
dispatcher/src/: .#dapp.rs  dapp.rs  lib.rs  main.rs
emulator/: Cargo.toml
emulator/src/: build.rs  emulator.rs  interface.rs  lib.rs  types.rs
emulator_interface/: Cargo.toml
emulator_interface/src/: build.rs  cartesi_base.rs  lib.rs  manager_high.rs  manager_high_grpc.rs
error/: Cargo.toml
error/src/: lib.rs
hasher/: Cargo.toml
hasher/src/: build.rs  hasher.rs  main.rs
state/: Cargo.toml
state/src/: lib.rs
transaction/: Cargo.toml
transaction/src/: lib.rs
transport/: Cargo.toml
transport/src/: lib.rs
utils/: Cargo.toml
utils/src/: lib.rs
vg/: Cargo.toml
vg/src/: lib.rs
worker/: Cargo.toml
worker/src/: lib.rs
