[package]
description = "Cartesi Verification Game"
homepage = "https://cartesi.io"
name = "compute"
version = "0.1.0"
authors = ["Cartesi Team"]

[dependencies]
log = "0.4"
env_logger = "0.6.0"
error = { path = "../error" }
transaction = { path = "../transaction" }
configuration = { path = "../configuration" }
ethereum-types = "0.4"
ethabi = "6.1.0"
serde_json = "1.0"
serde = "1.0.0"
serde_derive = "1.0.0"
state = { path = "../state" }
dispatcher = { path = "../dispatcher" }
hex = "0.3.2"