[package]
description = "Cartesi Configuration"
homepage = "https://cartesi.io"
name = "configuration"
version = "0.1.0"
authors = ["Cartesi Team"]

[dependencies]
log = "0.4"
env_logger = "0.6.0"
structopt = "0.2"
envy = "0.3"
error = { path = "../error" }
serde = "1.0.0"
serde_derive = "1.0.0"
serde_yaml = "0.8"
#ethabi = { git = "https://github.com/paritytech/ethabi", branch = "master" }
