[package]
description = "Cartesi Configuration"
homepage = "https://cartesi.io"
name = "configuration"
version = "0.1.0"
authors = ["Cartesi Team"]

[dependencies]
log = "0.4"
env_logger = "0.6.0"
structopt = "0.2"
envy = "0.3"
error = { path = "../error" }
transport = { path = "../transport" }
worker = { path = "../worker" }
serde = "1.0.0"
serde_derive = "1.0.0"
serde_yaml = "0.8"
serde_json = "1.0"
time = "0.1"
ethereum-types = "0.9.0"
parity-crypto = { version = "0.6.1", features = ["publickey"] }
hex = "0.3.2"
db-key = "0.0.5"
ethabi = "12.0.0"
web3 = "0.11.0"
tokio = "0.1"
