[package]
description = "Cartesi Dispatcher"
homepage = "https://cartesi.io"
name = "dispatcher"
version = "0.1.0"
authors = ["Cartesi Team"]

[dependencies]
ethcore-transaction = { git = "https://github.com/paritytech/parity-ethereum", branch = "master" }
emulator = { path = "../emulator" }
error = { path = "../error" }
web3 = { git = "https://github.com/tomusdrw/rust-web3" }
configuration = { path = "../configuration" }
transaction = { path = "../transaction" }
state = { path = "../state" }
utils = { path = "../utils" }
log = "0.4"
env_logger = "0.6.0"
ethereum-types = "0.4"
ethabi = "6.1.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
hex = "0.3.2"
crossbeam-utils = "0.6"
tokio = "0.1"
hyper = "0.12"