[package]
description = "Cartesi Dispatcher"
homepage = "https://cartesi.io"
name = "dispatcher"
version = "0.1.0"
authors = ["Cartesi Team"]

[dependencies]
error = { path = "../error" }
web3 = "0.11.0"
configuration = { path = "../configuration" }
transaction = { path = "../transaction" }
state = { path = "../state" }
utils = { path = "../utils" }
transport = { path = "../transport" }
log = "0.4"
env_logger = "0.6.0"
ethereum-types = "0.9.0"
ethabi = "12.0.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
hex = "0.3.2"
crossbeam-utils = "0.6"
tokio = "0.1"
hyper = "0.12"
grpc = { git = "https://github.com/stepancheg/grpc-rust.git", branch = "v0.6" }