[package]
description = "Cartesi Transaction Manager"
homepage = "https://cartesi.io"
name = "emulator"
version = "0.1.0"
authors = ["Cartesi Team"]

[dependencies]
log = "0.4"
env_logger = "0.6.0"
error = { path = "../error" }
configuration = { path = "../configuration" }
emulator_interface = { git = "ssh://git@github.com/cartesi/cartesi-grpc", branch = "9-split-dispatch-computer-repos"}
httpbis = "~0.7"
protobuf = "2"
grpc = "~0.6"
protoc-rust-grpc = { git = "https://github.com/stepancheg/grpc-rust" }
rustc-hex = "2.0.1"
ethereum-types = "0.4"
futures = "0.1.25"
