[package]
description = "Errors"
homepage = "https://cartesi.io"
name = "error"
version = "0.1.0"
authors = ["Cartesi Team"]

[dependencies]
envy = "0.3"
serde_yaml = "0.8"
error-chain = "0.12.0"
web3 = { git = "https://github.com/tomusdrw/rust-web3" }
time = "0.1"
ethkey = { git = "https://github.com/paritytech/parity-ethereum", branch = "master" }
rustc-hex = "2.0.1"
ethabi = "6.1.0"
serde_json = "1.0"