[package]
description = "Errors"
homepage = "https://cartesi.io"
name = "error"
version = "0.1.0"
authors = ["Cartesi Team"]

[dependencies]
envy = "0.3"
serde_yaml = "0.8"
error-chain = "0.12.0"
web3 = { git = "https://github.com/tomusdrw/rust-web3", tag = "v0.6.0" }
time = "0.1"
ethkey = { git = "https://github.com/cartesi-corp/parity-ethereum", branch = "stable-fixed" }
rustc-hex = "2.0.1"
ethabi = "6.1.0"
serde = "1.0"
serde_json = "1.0"
leveldb = "0.8.4"
grpc = { git = "https://github.com/stepancheg/grpc-rust.git", branch = "v0.6" }
hyper = "0.12"