[package]
description = "Cartesi Dispatcher"
homepage = "https://cartesi.io"
name = "hasher"
version = "0.1.0"
authors = ["Cartesi Team"]

[dependencies]
grpc            = "~0.6"
protobuf        = "~2"
futures         = "~0.1"
futures-cpupool = "~0.1"
protoc-rust-grpc = { git = "https://github.com/stepancheg/grpc-rust" }
env_logger = "0.6.0"
log = "0.4"
ethereum-types = "0.4"
web3 = { git = "https://github.com/cartesi/rust-web3" }
manager = { path = "../lib/grpc-interfaces/emulator_interface" }
manager_grpc = { path = "../lib/grpc-interfaces/emulator_interface" }
keccak-hash = "0.1.2"
rustc-hex = "2.0.1"

[[bin]]
name = "build-hasher"
path = "src/build.rs"

[[bin]]
name = "hasher"
path = "src/main.rs"
