[package]
description = "Cartesi Transaction Manager"
homepage = "https://cartesi.io"
name = "state"
version = "0.1.0"
authors = ["Cartesi Team"]

[dependencies]
log = "0.4"
env_logger = "0.6.0"
error = { path = "../error" }
configuration = { path = "../configuration" }
transport = { path = "../transport" }
ethereum-types = "0.9.0"
web3 = { git = "https://github.com/cartesi/rust-web3", branch="v0.6.0-implement-chain-id" }
ethabi = "12.0.0"
serde_json = "1.0"
leveldb = "0.8.4"
serde = "1.0.0"
serde_derive = "1.0.0"
db-key = "0.0.5"