[package]
description = "Cartesi Transaction Manager"
homepage = "https://cartesi.io"
name = "transaction"
version = "0.1.0"
authors = ["Cartesi Team"]

[dependencies]
log = "0.4"
env_logger = "0.6.0"
structopt = "0.2"
envy = "0.3"
error = { path = "../error" }
configuration = { path = "../configuration" }
serde = "1.0.0"
serde_derive = "1.0.0"
serde_yaml = "0.8"
ethcore = { git = "https://github.com/cartesi/parity-ethereum", branch = "stable-fixed" }
common-types = { git = "https://github.com/cartesi/parity-ethereum", branch = "stable-fixed" }
ethjson = { git = "https://github.com/cartesi/parity-ethereum", branch = "stable-fixed" }
ethkey = { git = "https://github.com/cartesi/parity-ethereum", branch = "stable-fixed" }
ethereum-types = "0.4"
keccak-hash = "0.1"
rlp = { version = "0.3.0", features = ["ethereum"] }
web3 = { git = "https://github.com/tomusdrw/rust-web3", tag = "v0.6.0" }
hex = "0.3.2"
ethabi = "6.1.0"
serde_json = "1.0"