[package]
description = "Cartesi Transaction Manager"
homepage = "https://cartesi.io"
name = "transaction"
version = "0.1.0"
authors = ["Cartesi Team"]

[dependencies]
log = "0.4"
env_logger = "0.6.0"
structopt = "0.2"
envy = "0.3"
error = { path = "../error" }
configuration = { path = "../configuration" }
transport = { path = "../transport" }
serde = "1.0.0"
serde_derive = "1.0.0"
serde_yaml = "0.8"
ethcore = { git = "https://github.com/openethereum/openethereum", tag = "v3.0.0" }
common-types = { git = "https://github.com/openethereum/openethereum", tag = "v3.0.0" }
ethjson = { git = "https://github.com/openethereum/openethereum", tag = "v3.0.0" }
parity-crypto = { version = "0.6.1", features = ["publickey"] }
ethereum-types = "0.9.0"
keccak-hash = "0.1"
rlp = "0.4.5"
web3 = "0.11.0"
hex = "0.3.2"
ethabi = "12.0.0"
serde_json = "1.0"