[package]
description = "Cartesi Transport"
homepage = "https://cartesi.io"
name = "transport"
version = "0.1.0"
authors = ["Cartesi Team"]

[dependencies]
log = "0.4"
error = { path = "../error" }
serde_yaml = "0.8"
serde_json = "1.0"
jsonrpc-core = "8.0.1"
tokio-timer = "0.1"
url = "2.1.0"
error-chain = "0.12.0"
web3 = "0.11.0"
