[package]
homepage = "https://cartesi.io"
name = "utils"
version = "0.1.0"
authors = ["Cartesi Team"]

[dependencies]
log = "0.4"
env_logger = "0.6.0"
web3 = { git = "https://github.com/cartesi/rust-web3", branch="v0.6.0-implement-chain-id" }
error = { path = "../error" }
configuration = { path = "../configuration" }
time = "0.1"