[package]
description = "Cartesi Worker"
name = "worker"
homepage = "https://cartesi.io"
version = "0.1.0"
authors = ["Cartesi Team"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
error = { path = "../error" }
transport = { path = "../transport" }
ethereum-types = "0.9.0"
web3 = "0.11.0"
env_logger = "0.6.0"
log = "0.4"
serde = "1.0.0"
serde_json = "1.0"
tokio = "0.1"
ethabi = "12.0.0"
parity-crypto = { version = "0.6.1", features = ["publickey"] }
